force-app/main/default/objects/Reference_HRG__c/Reference_HRG__c.object-meta.xml
<CustomObject>
    <label>Reference HRG Onboarding</label>
    <nameField>
        <displayFormat>HRG Onboarding {000000}</displayFormat>
        <label>Reference HRG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference HRG Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>