force-app/main/default/objects/Reference_HRG__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference HRG Onboarding</relationshipLabel>
    <relationshipName>Reference_HRG</relationshipName>
    <type>Lookup</type>
</CustomField>