force-app/main/default/objects/Reference_HRG__c/fields/ASO_PEO_DSM__c.field-meta.xml
<CustomField>
    <fullName>ASO_PEO_DSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASO-PEO DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_HRG_Onboarding2</relationshipName>
    <type>Lookup</type>
</CustomField>