force-app/main/default/objects/Reference_HRG__c/fields/BIS_ID__c.field-meta.xml
<CustomField>
    <fullName>BIS_ID__c</fullName>
    <formula>Account__r.Bis_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>