force-app/main/default/objects/Reference_HRG__c/fields/Client_Contact_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Meeting__c</fullName>
    <formula>IF(ISBLANK(  CC_Meeting__c  ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Meeting #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>