force-app/main/default/objects/Reference_HRG__c/fields/Client_Follow_up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Follow_up_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Follow up Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>