force-app/main/default/objects/Reference_HRG__c/fields/Date_of_Last_Queue_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Queue_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Queue Call</label>
    <type>Date</type>
</CustomField>