force-app/main/default/objects/Reference_HRG__c/fields/Days_in_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Onboarding__c</fullName>
    <description>Days in Onboarding</description>
    <formula>IF( 
ISBLANK(Onboarding_End_Date__c), (Today ()-Onboarding_Start_Date__c) ,  (Onboarding_End_Date__c - Onboarding_Start_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>