force-app/main/default/objects/Reference_HRG__c/fields/Enter_of_Employees_Laid_off__c.field-meta.xml
<CustomField>
    <fullName>Enter_of_Employees_Laid_off__c</fullName>
    <label>Enter # of Employees Laid off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>