force-app/main/default/objects/Reference_HRG__c/fields/HR_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>HR_Assessment_Completed__c</fullName>
    <description>Date the HR Assessment was completed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the HR Assessment was completed</inlineHelpText>
    <label>HR Assessment Completed</label>
    <type>Date</type>
</CustomField>