force-app/main/default/objects/Reference_HRG__c/fields/HR_Partner_Plus__c.field-meta.xml
<CustomField>
    <fullName>HR_Partner_Plus__c</fullName>
    <formula>Account__r.HR_Partner_Plus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HR Partner Plus</label>
    <type>Checkbox</type>
</CustomField>