force-app/main/default/objects/Reference_HRG__c/fields/of_Safety_Case_Submission__c.field-meta.xml
<CustomField>
    <fullName>of_Safety_Case_Submission__c</fullName>
    <formula>IF(ISBLANK(  Safety_Case_Submission__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Safety Case Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>