force-app/main/default/objects/Reference_HRG__c/fields/Onboarding_Meeting_Count__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Meeting_Count__c</fullName>
    <formula>IF((ISPICKVAL( Account__r.Type,&quot;Premier PBS Client&quot;)), 
IF(NOT(ISNULL( STO_Meeting__c )) ,1,0)+ 
IF(NOT(ISNULL( CC_Meeting__c )) ,1,0)+ 
IF(NOT(ISNULL( X1st_Invoice_Review__c )) ,1,0) + 
IF(NOT(ISNULL( HR_Assessment_Completed__c )) ,1,0)+ 
IF(NOT(ISNULL( Reference_Manual_Review__c )) ,1,0)+ 
IF(NOT(ISNULL( PEO_New_Client_Meeting__c )),1,0)+
IF(OR(NOT(ISNULL( HR_Action_Plan_Meeting__c )),NOT(ISNULL( COS_Meeting__c ))),1,0)  
, 
IF(NOT(ISNULL( STO_Meeting__c )) ,1,0)+ 
IF(NOT(ISNULL( CC_Meeting__c )) ,1,0)+ 
IF(NOT(ISNULL( X1st_Invoice_Review__c )) ,1,0) + 
IF(NOT(ISNULL( HR_Assessment_Completed__c )) ,1,0)+ 
IF(NOT(ISNULL( Reference_Manual_Review__c )) ,1,0))+
IF(OR(NOT(ISNULL( HR_Action_Plan_Meeting__c )),NOT(ISNULL( COS_Meeting__c ))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Meeting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>