force-app/main/default/objects/Reference_HRG__c/fields/Paychex_Learning_Center__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Learning_Center__c</fullName>
    <label>Paychex Learning Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Activated</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>