force-app/main/default/objects/Reference_HRG__c/fields/Payroll_Setup_Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Setup_Issue_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Setup Issue Notes</label>
    <type>TextArea</type>
</CustomField>