force-app/main/default/objects/Reference_HRG__c/fields/PEO_Handbook_Notes__c.field-meta.xml
<CustomField>
    <fullName>PEO_Handbook_Notes__c</fullName>
    <description>Created per FT Case 30002650</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PEO Handbook Notes</label>
    <type>TextArea</type>
</CustomField>