force-app/main/default/objects/Reference_HRG__c/fields/PEO_New_Client_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>PEO_New_Client_Meeting_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEO New Client Meeting Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>