force-app/main/default/objects/Reference_HRG__c/fields/Reference_Manual_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Manual_Review_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Manual Review Notes</label>
    <type>TextArea</type>
</CustomField>