force-app/main/default/objects/Reference_HRG__c/fields/Replacement_backfill_Enter_6M__c.field-meta.xml
<CustomField>
    <fullName>Replacement_backfill_Enter_6M__c</fullName>
    <label>Replacement/backfill Enter # 6M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>