force-app/main/default/objects/Reference_HRG__c/fields/Sales_Rep_Attended_CC_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Attended_CC_Meeting__c</fullName>
    <label>Sales Rep Attended Onboarding Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>