force-app/main/default/objects/Reference_HRG__c/fields/Service_Expectations_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Service_Expectations_Not_Met__c</fullName>
    <description>used to track concerns from clients whos expectations were not met</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date this client indicated their expectations were not met</inlineHelpText>
    <label>Service Expectations Not Met</label>
    <type>Date</type>
</CustomField>