force-app/main/default/objects/Reference_HRG__c/fields/Service_Expectations_Not_Met_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Expectations_Not_Met_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Expectations Not Met Notes</label>
    <type>TextArea</type>
</CustomField>