force-app/main/default/objects/Reference_HRG__c/fields/Stop_Welcome_Call_Automated_Emails__c.field-meta.xml
<CustomField>
    <fullName>Stop_Welcome_Call_Automated_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Client Success Mtg Automated Emails</label>
    <type>Checkbox</type>
</CustomField>