force-app/main/default/objects/Reference_HRG__c/fields/SUI_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>SUI_Date_Updated__c</fullName>
    <description>Date SUI Product Utilization was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SUI Date Updated</label>
    <type>Date</type>
</CustomField>