force-app/main/default/objects/Reference_HRG__c/fields/Turnover_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Meeting__c</fullName>
    <formula>IF(ISBLANK( STO_Meeting__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnover Meeting #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>