force-app/main/default/objects/Reference_HRG__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Type from Prospect Client</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>