force-app/main/default/objects/Reference_HRG__c/fields/Welcome_Call_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Complete_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Success Meeting Complete Date</label>
    <type>Date</type>
</CustomField>