force-app/main/default/objects/Reference_HRG__c/fields/X401k_Setup_Issue__c.field-meta.xml
<CustomField>
    <fullName>X401k_Setup_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the 401k Setup Issue was reported</inlineHelpText>
    <label>401k Setup Issue</label>
    <type>Date</type>
</CustomField>