force-app/main/default/objects/Reference_HRG__c/fields/Zone_Manager__c.field-meta.xml
<CustomField>
    <fullName>Zone_Manager__c</fullName>
    <formula>Account__r.Premier_PBS_Account_Owner__r.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Account__r.Premier_PBS_Account_Owner__r.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Manager</label>
    <type>Text</type>
</CustomField>