force-app/main/default/objects/Reference_HRG__c/listViews/Client_Base_with_Last_HRA_and_HRAP.listView-meta.xml
<ListView>
    <fullName>Client_Base_with_Last_HRA_and_HRAP</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Last_HRA_Completed_Date__c</columns>
    <columns>Last_HR_Action_Plan_Completed_Date__c</columns>
    <columns>HRG__c</columns>
    <columns>HRG_Area_Manager__c</columns>
    <columns>Onboarding_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>HR Solutions</value>
    </filters>
    <filters>
        <field>HR_Partner_Plus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Client Base with Last HRA and HRAP</label>
    <sharedTo>
        <roleAndSubordinates>PHRSDirector</roleAndSubordinates>
    </sharedTo>
</ListView>