force-app/main/default/objects/Reference_HRG__c/listViews/My_Reference_HRG_Onboarding.listView-meta.xml
<ListView>
    <fullName>My_Reference_HRG_Onboarding</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <columns>DateofLastVisit__c</columns>
    <columns>HR_Assessment_Completed__c</columns>
    <columns>COS_Meeting__c</columns>
    <columns>Onboarding_End_Date__c</columns>
    <columns>HRO_Updated_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Reference HRG Onboarding</label>
</ListView>